--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>简约音乐播放器</title>
+    <title>崩坏3 TruE 「因你而在的故事」</title>
     <style>
         :root {
             --primary-color: #ff69b4;  /* 粉红色主题 */
@@ -120,6 +120,7 @@
             <div class="caption">最初的律者，人之律者</div>
             <div class="info">
                 <h1>TruE</h1>
+                <h3>「因你而在的故事」</h3>
                 <p>爱莉希雅</p>
             </div>
             <audio id="audio" src="music.mp3"></audio>
