--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
             <img src="bg.jpg" class="cover" alt="专辑封面">
             <div class="caption">最初的律者，人之律者</div>
             <div class="info">
-                <h1>TruE</h1>
-                <h3>「因你而在的故事」</h3>
+                <h1>TruE 「因你而在的故事」</h1>
                 <p>爱莉希雅</p>
             </div>
             <audio id="audio" src="music.mp3"></audio>
