--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <div class="container">
         <div class="player">
             <p>提示：黎武轩，这是给你做的网站</p>
+            <h1>黎武轩定理：20专票=白露&大保底</h1>
             <img src="bg.jpg" class="cover" alt="专辑封面">
             <div class="caption">最初的律者，人之律者</div>
             <div class="info">
